feat: add Swiper on mobile

--- a/index.html
+++ b/index.html
@@ -203,44 +203,158 @@
             </section>
 
             <section class="projects" id="projects">
-                <h2 class="projects__title">НАШИ ПРОЕКТЫ</h2>
-                <ul class="projects__nav">
-                    <li class="projects__nav-list-item">Все проекты</li>
-                    <li class="projects__nav-list-item">Гос. проеткы</li>
-                    <li class="projects__nav-list-item">Спецпрограммы</li>
-                    <li class="projects__nav-list-item">В разработке</li>
-                </ul>
-                <div class="projects__thumb-wrapper">
-                    <div class="projects__thumb">
-                        <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
-                        <p class="projects__thumb-text"> 
-                            Направление включает в себя исследования и разработки технологий МО и КТ. Модули для внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или программы ДПО.
-                        </p>
-                        <a href="" class="projects__thumb-link">Подробнее</a>
+                <div class="projects__body swiper">
+                    <h2 class="projects__title">НАШИ ПРОЕКТЫ</h2>
+                    <div for="select" class="projects__select">
+                        <p class="projects__select-text">Все проекты</p>
+                        <ul class="projects__select-items">
+                            <li class="projects__label">Все проекты</li>
+                            <li class="projects__label">Гос. проекты</li>
+                            <li class="projects__label">Спецпрограммы</li>
+                            <li class="projects__label">В разработке</li>
+                        </ul>
                     </div>
-                    <div class="projects__thumb">
-                        <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
-                        <p class="projects__thumb-text">
-                            Направление включает в себя исследования и разработки технологий МО и КТ. Модули для внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или программы ДПО.
-                        </p>
-                        <a href="" class="projects__thumb-link">Подробнее</a>
+                    <ul class="projects__nav">
+                        <li class="projects__nav-list-item">Все проекты</li>
+                        <li class="projects__nav-list-item">Гос. проеткы</li>
+                        <li class="projects__nav-list-item">Спецпрограммы</li>
+                        <li class="projects__nav-list-item">В разработке</li>
+                    </ul>
+                    <div class="projects__thumb-wrapper swiper-wrapper">
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
+                        <div class="projects__thumb swiper-slide">
+                            <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                            <p class="projects__thumb-text">
+                                Направление включает в себя исследования и разработки технологий МО и КТ. Модули для
+                                внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или
+                                программы ДПО.
+                            </p>
+                            <a href="" class="projects__thumb-link">Подробнее</a>
+                        </div>
                     </div>
-                    <div class="projects__thumb">
-                        <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
-                        <p class="projects__thumb-text">
-                            Направление включает в себя исследования и разработки технологий МО и КТ. Модули для внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или программы ДПО.
-                        </p>
-                        <a href="" class="projects__thumb-link">Подробнее</a>
+                    <div class="projects__navigation">
+                        <button class="projects__button projects__button_type_prev"></button>
+                        <div class="projects__interface"></div>
+                        <button class="projects__button projects__button_type_next"></button>
                     </div>
-                    <div class="projects__thumb">
-                        <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
-                        <p class="projects__thumb-text">
-                            Направление включает в себя исследования и разработки технологий МО и КТ. Модули для внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или программы ДПО.
-                        </p>
-                        <a href="" class="projects__thumb-link">Подробнее</a>
-                    </div>
+
                 </div>
-                <div class="projects__interface">1/30</div>
             </section>
 
             <section class="educate" id="educate">
