feat: update styles on tablet

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                         </ul>
                     </div>
                     <ul class="projects__nav">
-                        <li class="projects__nav-list-item">Все проекты</li>
-                        <li class="projects__nav-list-item">Гос. проеткы</li>
+                        <li class="projects__nav-list-item projects__nav-list-item_active">Все проекты</li>
+                        <li class="projects__nav-list-item">Гос. проекты</li>
                         <li class="projects__nav-list-item">Спецпрограммы</li>
                         <li class="projects__nav-list-item">В разработке</li>
                     </ul>
