--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
 
             <section class="educate" id="educate">
                 <div class="educate__body">
-                    <h2 class="title educate__title">Образование</h2>
-                    <p class="subtitle educate__subtitle">В образовательной деятельности НЦКР активно использует
+                    <h2 class="educate__title">Образование</h2>
+                    <p class="educate__subtitle">В образовательной деятельности НЦКР активно использует
                         существующую в
                         Университете ИТМО инфраструктуру и опыт реализации сетевых форм обучения, опираясь на
                         вузы-диссеминаторы
@@ -371,9 +371,9 @@
                         <img class="programs__picture" src="./images/picture/aspirant.png"
                             alt="Фотография студентов окончивших магистратуру">
                         <div class="programs__text">
-                            <h3 class="title programs__title">Образовательные программы аспирантуры в области МО и КТ
+                            <h3 class="programs__title">Образовательные программы аспирантуры в области МО и КТ
                             </h3>
-                            <ul class="list programs__list">
+                            <ul class="programs__list">
                                 <li class="programs__item">Прикладные технологии искусственного интеллекта;</li>
                                 <li class="programs__item">Машинное обучение и искусственный интеллект;</li>
                                 <li class="programs__item">Биометрические информационные системы;</li>
@@ -383,7 +383,7 @@
                                 <li class="programs__item">Семантические системы и инженерия знаний;</li>
                                 <li class="programs__item">Технологии разработки компьютерных игр</li>
                             </ul>
-                            <a class="link programs__link" href="#">
+                            <a class="programs__link" href="#">
                                 <p class="programs__link-text">Подробнее</p>
                             </a>
                         </div>
@@ -392,9 +392,9 @@
                         <img class="programs__picture" src="./images/picture/magistr.png"
                             alt="Фотография студентов окончивших магистратуру">
                         <div class="programs__text">
-                            <h3 class="title programs__title">Образовательные программы аспирантуры в области МО и КТ
+                            <h3 class="programs__title">Образовательные программы аспирантуры в области МО и КТ
                             </h3>
-                            <ul class="list programs__list">
+                            <ul class="programs__list">
                                 <li class="programs__item">Прикладные технологии искусственного интеллекта;</li>
                                 <li class="programs__item">Машинное обучение и искусственный интеллект;</li>
                                 <li class="programs__item">Биометрические информационные системы;</li>
@@ -404,15 +404,15 @@
                                 <li class="programs__item">Семантические системы и инженерия знаний;</li>
                                 <li class="programs__item">Технологии разработки компьютерных игр</li>
                             </ul>
-                            <a class="link programs__link" href="#">
+                            <a class="programs__link" href="#">
                                 <p class="programs__link-text">Подробнее</p>
                             </a>
                         </div>
                     </div>
 
                     <div class="educate__buttons">
-                        <button class="button educate__button" id="aspirant__button">Аспирантура</button>
-                        <button class="button educate__button educate__button_active"
+                        <button class="educate__button" id="aspirant__button">Аспирантура</button>
+                        <button class="educate__button educate__button_active"
                             id="magistr__button">Магистратура</button>
                     </div>
                 </div>
@@ -420,14 +420,14 @@
 
             <section class="publications" id="publications">
                 <div class="publications__body swiper">
-                    <h2 class="title publications__title">Публикации</h2>
+                    <h2 class="publications__title">Публикации</h2>
                     <div class="publications__slider swiper-wrapper">
 
                         <template class="publications__template">
                             <article class="publications__publication publication swiper-slide">
                                 <div class="publication__body">
                                     <img class="publication__picture publication__picture_visible">
-                                    <h1 class="title publication__title"></h1>
+                                    <h1 class="publication__title"></h1>
                                     <p class="publication__authors"></p>
                                     <p class="publication__text"></p>
                                 </div>
@@ -436,13 +436,13 @@
                                         <p class="publication__more-text">Читать полностью</p>
                                     </a>
 
-                                    <button class="button publicaction__button">
+                                    <button class="publicaction__button">
                                         <img class="publicaction__share" src="./images/svg/share.svg"
                                             alt="Кнопка поделиться">
                                     </button>
                                 </div>
 
-                                <ul class="list publication__social-sites social-sites">
+                                <ul class="publication__social-sites social-sites">
                                     <li class="social-sites__item">
                                         <a class="social-sites__link" href="#">
                                             <img class="social-sites__picture" src="./images/svg/vk.svg"
@@ -482,8 +482,8 @@
                     <div class="publications__points swiper-pagination"></div>
                 </div>
 
-                <button class="button publications__slider-button publications__slider-button_type_prev"></button>
-                <button class="button publications__slider-button publications__slider-button_type_next"></button>
+                <button class="publications__slider-button publications__slider-button_type_prev"></button>
+                <button class="publications__slider-button publications__slider-button_type_next"></button>
             </section>
 
             <section class="team" id="team">
